Fix button collapsing in toolbars

--- a/client/common/blocks/navbar/navbar.styl
+++ b/client/common/blocks/navbar/navbar.styl
@@ -90,14 +90,11 @@
     opacity 0
     transition opacity .3s linear
 
-.visible-nav-alt
+.navbar-alt .hidden-nav-alt
   display none !important
 
-.navbar-alt
-  .visible-nav-alt
-    display inline-block !important
-  .hidden-nav-alt
-    display none !important
+.page-head .hidden-page-head
+  display none !important
 
 .navbar__m-secondary
   .navbar-collapse
